--- a/Projeto1 PNAD.ipynb
+++ b/Projeto1 PNAD.ipynb
@@ -30,7 +30,7 @@
     "___\n",
     "## O machismo presente nas diversas regiões do Brasil atrasam o desenvolvimento tecnológico do país?\n",
     "\n",
-    "Com esta pesquisa, pretendo analisar o machismo presente nas diversas regiões do Brasil e ver se ele é um impacto ao desenvolvimento tecnológico do país e ao acesso à tecnologia do brasileiro. "
+    "Com esta pesquisa, pretendo analisar o machismo presente nas diversas regiões do Brasil e ver se ele é um impacto ao desenvolvimento tecnológico do país e ao acesso à tecnologia do brasileiro. Deve-se analisar as PNAD's de 2011 em comparação as de 2015 para ver o perfil histórico da questão."
    ]
   },
   {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -68,7 +68,7 @@
      "output_type": "stream",
      "text": [
       "Esperamos trabalhar no diretório\n",
-      "C:\\Users\\rafaa\\Documents\\Insper\\DP's 2º\\Dados\n"
+      "C:\\Users\\rafaa\\Documents\\GitHub\\Dados_DP_2018\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
